add two ticket types - task and bug
